Added DateInput in registration and edit forms

--- a/Styles/LoginStyle.css
+++ b/Styles/LoginStyle.css
@@ -24,7 +24,7 @@ input {
     color:#34495e;
     background-color: aliceblue;
     border-radius: 5px;
-    font-family: FreeSerif;
+    font-family: "DejaVu Sans";
     width:203px;
 }
 .submit {
