--- a/Styles/HeaderStyle.css
+++ b/Styles/HeaderStyle.css
@@ -1,62 +1,82 @@
 .header {
     background-color: #34495e;
     width:100%;
-    height:50px;
-    border-bottom:3px #2c3e50 solid;
-
-}
-.nav {
-    width: 400px;
-    margin:auto;
-}
-.navButton {
-    float:left;
-    width:100px;
     height:40px;
-    color:white;
-    border-left:2px solid #2c3e50;
-    border-right:2px solid #2c3e50;
-    margin-top:5px;
-    margin-left:20px;
-    font-size:20px;
-    font-family: "DejaVu Sans";
-    text-align: center;
-    padding-top: 10px;
-    text-decoration: solid;
-
-
+    top:0px;
+    position: fixed;
+    z-index: 2;
 }
 
 .logout:link {
     float:right;
-    border-radius: 3px;
     text-decoration: solid;
     text-align: center;
     font-family: "DejaVu Sans";
     background-color: #3498db;
     color:antiquewhite;
-    padding-top: 10px;
+    padding: 2px;
     font-size:15px;
-    width:100px;
-    height: 30px;
-    margin-top:5px;
-    margin-right: 50px;
+    width:50px;
+    height: 20px;
+    margin-top:8px;
+    margin-right: 5px;
     border:0px;
 }
 
 .logout:visited {
     float:right;
-    border-radius: 3px;
     text-decoration: solid;
     text-align: center;
     font-family: "DejaVu Sans";
     background-color: #3498db;
     color:antiquewhite;
-    padding-top: 10px;
+    padding: 2px;
     font-size:15px;
-    width:100px;
-    height: 30px;
-    margin-top:5px;
-    margin-right: 50px;
+    width:50px;
+    height: 20px;
+    margin-top:8px;
+    margin-right: 5px;
     border:0px;
+}
+
+.block {
+    width:1000px;
+    margin:auto;
+}
+
+.search {
+    width:310px;
+    margin-left:345px;
+    margin-top:8px;
+    float:left;
+}
+
+.searchinput {
+    border:2px #2c3e50 solid;
+    background-color: #2c3e50;
+    font-size: 15px;
+    color:white;
+    font-family: "DejaVu Sans";
+    width:300px;
+    border-radius: 15px;
+    text-align: center;
+}
+
+.nav {
+    width:180px;
+    float:left;
+    margin-left:55px;
+}
+
+.navButton {
+    height:25px;
+    width:25px;
+    margin:8px;
+    float:left;
+}
+
+div.navButton > img {
+    max-width:100%;
+    min-width:100%;
+    max-height:100%;
 }
