--- a/Styles/ProfileFormStyle.css
+++ b/Styles/ProfileFormStyle.css
@@ -1,70 +1,78 @@
 body {
     padding: 0px;
     margin:0px;
-    background-color: #2c3e50;
-    background-image: url("https://www.transparenttextures.com/patterns/diagmonds.png");
+    background-color: #BDBDBD;
 }
 .body {
-
-    width:60%;
-
-    margin:0px auto;
-    margin-top:10px;
-    border-radius: 3px;
-    border:3px #2c3e50 solid;
-    background-color: #ecf0f1;
+    width:1000px;
+    height:550px;
+    margin:auto;
+    margin-top:55px;
+    background-color: #FAFAFA;
 }
-.header {
-    background-color: #34495e;
-    width:100%;
-    height:50px;
-    border-bottom:3px #2c3e50 solid;
 
-}
 .edit {
-    width:75%;
-    margin:10px;
+    width:600px;
+    margin:50px;
+    margin-left:150px;
+    float:left;
 
 }
-.profile {
-
-    height:150px;
-    width:150px;
-    left: 0;
-    right: 0;
-    top:225px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top:20px;
-    overflow: hidden;
-    border-radius: 50%;
-    border:5px #34495e solid;
+.avatar {
+    position: absolute;
+    height:200px;
+    width:200px;
+    flaot:left;
 }
 
-div.profile > img {
+div.avatar > img {
     max-width:100%;
     min-width:100%;
     max-height:100%;
-
-
 }
-input {
-    border:2px #34495e solid;
-    font-size: 20px;
-    color:#34495e;
-    background-color: aliceblue;
-    border-radius: 5px;
-    font-family: FreeSerif;
-    width:400px;
+
+.avatarbox {
+    position: relative;
+    width:800px;
+    height: 200px;
+    float:left;
+    margin-left:100px;
+    margin-top:10px;
 }
-.submit {
-    border-radius: 3px;
+
+.upload {
+    position: absolute;
+    width:600px;
+    height: 200px;;
+    left:50px;
+    top:20px;
+    float:left;
+}
+
+.uploadImage {
     font-family: "DejaVu Sans";
     background-color: #3498db;
     color:antiquewhite;
     padding: 3px;
     font-size:15px;
+    border:0px;
+}
 
+input {
+    border:1px #BDBDBD solid;
+    font-size: 20px;
+    color:#34495e;
+    background-color: #BDBDBD;
+    font-family: "DejaVu Sans";
+    width:410px;
+}
+
+.submit {
+    font-family: "DejaVu Sans";
+    background-color: #3498db;
+    color:antiquewhite;
+    padding: 3px;
+    font-size:15px;
     border:0px;
 }
 
@@ -72,7 +80,6 @@ input {
     float:right;
 }
 button {
-    border-radius: 3px;
     font-family: "DejaVu Sans";
     background-color: #3498db;
     color:antiquewhite;
@@ -90,11 +97,14 @@ button {
 .centergender {
     width:200px;
     margin-left:50%;
-
-
 }
 label {
     font-family: "DejaVu Sans";
     color:#34495e;
+}
+
+input[type="radio"] {
+    -webkit-appearance: checkbox;
+    -moz-appearance: checkbox;
 }
 
