--- a/Styles/ProfileStyle.css
+++ b/Styles/ProfileStyle.css
@@ -1,79 +1,107 @@
 body {
     padding: 0px;
     margin:0px;
-    background-color: #2c3e50;
-    background-image: url("https://www.transparenttextures.com/patterns/diagmonds.png");
+    background-color: #BDBDBD;
 }
 .body {
-
-    width:60%;
-
-    margin:0px auto;
-    margin-top:10px;
-    border-radius: 3px;
-    border:3px #2c3e50 solid;
-    background-color: #ecf0f1;
-
-
-
+    width:1000px;
+    height:800px;
+    margin:auto;
+    margin-top:50px;
+    background-color: #FAFAFA;
 }
 
-.cover {
-    height:300px;
-    width:100%;
-    background-color: orange;
-    position: relative;
-}
 .profile {
-    position: absolute;
-    height:150px;
-    width:150px;
-    left: 0;
-    right: 0;
-    top:225px;
-    margin-left: 10%;
-    margin-right: auto;
-    overflow: hidden;
-    border-radius: 50%;
-    border:5px #34495e solid;
-}
-div.cover > img {
-    position: absolute;
-    max-width:100%;
-    min-width:100%;
-    max-height:100%;
+    height:300px;
+    width:300px;
+    padding:15px;
+    margin:10px 10px;
+    background-color: #ecf0f1;
+    float:left;
 
 }
+
 div.profile > img {
     max-width:100%;
     min-width:100%;
     max-height:100%;
-
-
 }
 .about {
-    margin:0px auto;
-    margin-top:100px;
-    width: 60%;
+    width:620px ;
+    height:320px;
+    padding:5px;
+    margin:10px 10px;
     background-color: #ecf0f1;
-    border-radius: 5px;
-    border:5px #bdc3c7 solid;
-
-    padding:10px;
-
+    float:left;
+    text-align: center;
 }
+
+.name {
+    width:600px;
+    padding:5px;
+    padding-bottom: 40px;
+    height: 50px;
+    text-align: center;
+    border:5px solid #FAFAFA;
+}
+
+.editdiv {
+    height:30px;
+    width:300px;
+    padding:15px;
+    margin:10px 10px;
+    background-color: #ecf0f1;
+    float:left;
+}
+
+.edit:visited {
+    display:block;
+    text-decoration: solid;
+    text-align: center;
+    font-family: "DejaVu Sans";
+    background-color: #3498db;
+    color:antiquewhite;
+    font-size:20px;
+    width:200px;
+    height: 30px;
+    padding-top: 5px;
+    float:left;
+    margin-left:50px;
+}
+
+.edit:link {
+    display:block;
+    text-decoration: solid;
+    text-align: center;
+    font-family: "DejaVu Sans";
+    background-color: #3498db;
+    color:antiquewhite;
+    font-size:20px;
+    width:200px;
+    height: 30px;
+    margin-top:5px;
+    padding-top: 5px;
+    float:left;
+    margin-left:50px;
+}
+
+.buttons {
+    width:600px;
+    height:30px;
+    padding:15px;
+    margin:10px 10px;
+    background-color: #ecf0f1;
+    float:left;
+    text-align: center;
+}
+
 h2 {
-    border-radius: 3px;
     font-family: "DejaVu Sans";
     color:#34495e;
-    padding: 3px;
     font-size:30px;
-    position:absolute;
-    left:40%;
-        margin-top:10px;
 }
 ul {
-    list-style-type: square;
+    list-style-type: none;
     font-family: "DejaVu Sans";
     color:#34495e;
 }
