--- a/Styles/TimelineStyle.css
+++ b/Styles/TimelineStyle.css
@@ -5,7 +5,6 @@ body {
     background-image: url("https://www.transparenttextures.com/patterns/diagmonds.png");
 }
 .body {
-
     width:40%;
     height:auto;
     margin:0px auto;
@@ -13,17 +12,8 @@ body {
     border-radius: 3px;
     border:5px #2c3e50 solid;
     background-color: #ecf0f1;
-
-
-
 }
-.header {
-    background-color: #34495e;
-    width:100%;
-    height:50px;
-    border-bottom:3px #2c3e50 solid;
 
-}
 .post {
     position: relative;
     width:100%;
@@ -81,7 +71,7 @@ div.profile > img {
 
 
 }
-input {
+.commentInput {
     margin:10px;
     border:1px #34495e solid;
     font-size: 20px;
