--- a/Styles/SearchStyle.css
+++ b/Styles/SearchStyle.css
@@ -55,3 +55,46 @@ h2 {
     font-size: 10px;
     color: #34495e;
 }
+
+.pageSelect {
+    position: relative;
+    height:50px;
+    width:200px;
+    margin:auto;
+    margin-top:20px;
+}
+
+.selector1 {
+    position: absolute;
+    left:10%;
+    font-size:20px;
+    text-decoration: none;
+}
+
+.selector2 {
+    position: absolute;
+    left:30%;
+    font-size:20px;
+    text-decoration: none;
+}
+
+.selector3 {
+    position: absolute;
+    left:50%;
+    font-size:20px;
+    text-decoration: none;
+}
+
+.selector4 {
+    position: absolute;
+    left:70%;
+    font-size:20px;
+    text-decoration: none;
+}
+
+.selector5 {
+    position: absolute;
+    left:90%;
+    font-size:20px;
+    text-decoration: none;
+}
