--- a/Styles/FriendsPageStyle.css
+++ b/Styles/FriendsPageStyle.css
@@ -28,12 +28,14 @@ body {
     width:100px;
     height: 100px;
     height: 100px;
+    overflow: hidden;
 }
 
 div.avatar > img {
-    max-width:100%;
-    min-width:100%;
-    max-height:100%;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .aboutUser {
