--- a/Styles/NotificationBarStyle.css
+++ b/Styles/NotificationBarStyle.css
@@ -10,13 +10,15 @@
     height:46px;
     margin:2px;
     float:left;
+    position: relative;
+    overflow: hidden;
 }
 
 div.notifAvatar > img {
-    max-height: 100%;
-    min-height: 100%;
-    max-width: 100%;
-    min-width: 100%;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .notifAbout {
