--- a/Styles/NotificationColumnStyle.css
+++ b/Styles/NotificationColumnStyle.css
@@ -10,13 +10,15 @@
     height:92px;
     margin:4px;
     float:left;
+    position: relative;
+    overflow: hidden;
 }
 
 div.notifAvatarColumn > img {
-    max-height: 100%;
-    min-height: 100%;
-    max-width: 100%;
-    min-width: 100%;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .notifAboutColumn {
