--- a/Styles/ProfileFormStyle.css
+++ b/Styles/ProfileFormStyle.css
@@ -23,12 +23,15 @@ body {
     height:200px;
     width:200px;
     flaot:left;
+    position: relative;
+    overflow: hidden;
 }
 
 div.avatar > img {
-    max-width:100%;
-    min-width:100%;
-    max-height:100%;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .avatarbox {
