--- a/Styles/ProfileStyle.css
+++ b/Styles/ProfileStyle.css
@@ -14,17 +14,20 @@ body {
 .profile {
     height:300px;
     width:300px;
-    padding:15px;
     margin:10px 10px;
     background-color: #ecf0f1;
+    border:15px solid #ecf0f1;
     float:left;
+    position: relative;
+    overflow: hidden;
 
 }
 
 div.profile > img {
-    max-width:100%;
-    min-width:100%;
-    max-height:100%;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 .about {
     width:620px ;
