--- a/Styles/PhotosStyle.css
+++ b/Styles/PhotosStyle.css
@@ -1,46 +1,84 @@
 body {
     padding: 0px;
     margin:0px;
-    background-color: #2c3e50;
-    background-image: url("https://www.transparenttextures.com/patterns/diagmonds.png");
+    background-color: #BDBDBD;
 }
-
 .body {
-
-    width:60%;
-    height: 500px;
-    margin:10px auto;
-
-    border-radius: 3px;
-    border:3px #2c3e50 solid;
-    background-color: #ecf0f1;
-    padding:10px;
-
+    width:800px;
+    min-height:100px;
+    margin:auto;
+    margin-top:50px;
+    padding: 5px;
+    background-color: #FAFAFA;
 }
+
+
+.containerBox {
+    margin:auto;
+    min-height:100px;
+    width:630px;
+    padding: 5px;
+    background-color: #bdc3c7;
+}
+
 .pic {
-
-    height:150px;
-    width:150px;
-
+    display: inline-block;
+    height:200px;
+    width:200px;
     margin-top:5px;
     margin-left:5px;
     overflow: hidden;
-    border:1px groove #bdc3c7;
-
-    border-radius:2%;
-    float:left;
+    position: relative;
+    overflow: hidden;
 
 }
 
 div.pic > img {
-    max-width:100%;
-    min-width:100%;
-    max-height:100%;
-
-
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 h1 {
+    margin:auto;
     font-family: "DejaVu Sans";
     color:#2c3e50;
     text-align: center;
+}
+
+
+.upload {
+    margin:auto;
+    width:400px;
+    height: 100px;;
+    margin-top:10px;
+
+}
+
+.uploadImage {
+    font-family: "DejaVu Sans";
+    background-color: #3498db;
+    color:antiquewhite;
+    padding: 3px;
+    font-size:15px;
+    border:0px;
+}
+
+
+input {
+    border:1px #BDBDBD solid;
+    font-size: 20px;
+    color:#34495e;
+    background-color: #BDBDBD;
+    font-family: "DejaVu Sans";
+    width:410px;
+}
+
+.submit {
+    font-family: "DejaVu Sans";
+    background-color: #3498db;
+    color:antiquewhite;
+    padding: 3px;
+    font-size:15px;
+    border:0px;
 }
