Added posts and Timeline, updateing via Ajax

--- a/Styles/ProfileFormStyle.css
+++ b/Styles/ProfileFormStyle.css
@@ -9,6 +9,8 @@ body {
     margin:auto;
     margin-top:55px;
     background-color: #FAFAFA;
+    box-shadow: 0 10px 10px -6px gray;
+
 }
 
 .edit {
