--- a/Styles/LoginStyle.css
+++ b/Styles/LoginStyle.css
@@ -2,17 +2,14 @@ body {
     margin:0px;
     border:0px;
     padding: 0px;
-    background: url(../Assets/bg.jpg) no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+    background-color: #BDBDBD;
 }
 
 .header {
-    background-color: rgba(0,0,0,0.5);
+    background-color: #34495e;
     width:100%;
     height:100px;
+    box-shadow: 0 10px 10px -6px gray;
 }
 .login {
     float: right;
@@ -42,8 +39,8 @@ input {
 
     width:410px;
     margin-top:50px;
-
-    background-color:  rgba(0,0,0,0.5);
+    box-shadow: 0 10px 10px -6px gray;
+    background-color: #34495e;
 }
 #long {
     width:410px;
