--- a/Styles/TimelineStyle.css
+++ b/Styles/TimelineStyle.css
@@ -1,94 +1,150 @@
 body {
     padding: 0px;
     margin:0px;
-    background-color: #2c3e50;
-    background-image: url("https://www.transparenttextures.com/patterns/diagmonds.png");
+    background-color: #BDBDBD;
 }
 .body {
-    width:40%;
-    height:auto;
-    margin:0px auto;
-    margin-top:10px;
-    border-radius: 3px;
-    border:5px #2c3e50 solid;
-    background-color: #ecf0f1;
+    width:800px;
+    min-height:100px;
+    margin:auto;
+    margin-top:50px;
+    padding: 5px;
 }
 
-.post {
+.containerBox {
     position: relative;
-    width:100%;
-}
-.owner {
-    width: 100%;
+    margin:auto;
+    margin-top:55px;
+    width:500px;
+    min-height: 135px;
     background-color: #ecf0f1;
-}
-.likeandshare {
-    margin-left:auto;
-    margin-right:auto;
-    width:50%;
-}
-.comment {
-    width: 100%;
-    height: 50px;
+    box-shadow: 0 10px 10px -6px gray;
+    overflow:auto;
 }
 
-.profile {
-    margin:3px;
-    height:50px;
+.avatarBox {
+    margin:5px;
+    position:relative;
+    float: left;
     width:50px;
-    left: 0;
-    float:left;
-    top:225px;
+    height: 50px;
     overflow: hidden;
-    border-radius: 50%;
-    border:2px #34495e solid;
-
 }
-h3 {
-    margin-left:20px;
+
+div.avatarBox > img {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.time {
+    position: absolute;
+    left:60px;
+    top:30px;
+    margin:5px;
+    font-size:10px;
+    color:#95a5a6;
+    font-family: "DejaVu Sans";
+}
+
+.textBox {
+    display:inline-block;
     float:left;
+    width:480px;
+    margin:5px;
+    padding:5px;
+    min-height: 0px;
+    background-color: #E0E0E0;
+}
+
+.postBox {
+    margin:5px;
+    position:relative;
+    width:490px;
+    min-height: 50px;
+}
+
+div.postBox > img {
+    width:inherit;
+}
+
+p {
     font-family: "DejaVu Sans";
     color:#2c3e50;
 }
-i {
-    float:right;
+
+.poster {
+    float:left;
+    margin:5px;
+    margin-top:10px;
+    font-family: "DejaVu Sans";
     font-size:15px;
-    color:#bdc3c7;
-   margin-top:20px;
-    margin-right:20px;
-}
-div.post > img {
-
-    max-width:100%;
-    min-width:100%;
-
+    color:#7f8c8d;
 
 }
-div.profile > img {
-    max-width:100%;
-    min-width:100%;
-    max-height:100%;
 
-
+.postcontainer {
+    position: fixed;
+    left:50%;
+    margin-left:-400px;
+    z-index: 2;
+    width:800px;
+    height:50px;
+    background-color: #ecf0f1 ;
+    box-shadow: 0 10px 10px -6px gray;
 }
-.commentInput {
-    margin:10px;
-    border:1px #34495e solid;
-    font-size: 20px;
+
+
+.textinput {
+    margin:5px;
+    padding: 2px;
+    width:670px;
+    height: 40px;
+    border:1px #E0E0E0 solid;
+    font-size: 15px;
     color:#34495e;
-    background-color: aliceblue;
-    border-radius: 5px;
-    font-family: FreeSerif;
-    width:70%;
-
+    background-color: #E0E0E0;
+    font-family: "DejaVu Sans";
+    resize: none;
+    float:left;
 }
-.submit {
-    border-radius: 3px;
+
+.fileinput {
+    width: 0.1px;
+    height: 0.1px;
+    opacity: 0;
+    overflow: hidden;
+    position: absolute;
+    z-index: -1;
+}
+
+.upload  {
+    position: absolute;
+    left:680px;
+    top:5px;
     font-family: "DejaVu Sans";
     background-color: #3498db;
     color:antiquewhite;
     padding: 3px;
-    font-size:15px;
-    width:100px;
+    font-size:10px;
     border:0px;
+    width:110px;
+    text-align: center;
 }
+
+.submit {
+    text-align: center;
+    position: absolute;
+    left:680px;
+    top:28px;
+    font-family: "DejaVu Sans";
+    background-color: #3498db;
+    color:antiquewhite;
+    padding: 3px;
+    font-size:10px;
+    border:0px;
+    width:115px;
+
+}
+
