Small fixes, changed search to GET, added middleware for AUTH and 404

--- a/view/login.phtml
+++ b/view/login.phtml
@@ -12,7 +12,7 @@
         <div class="login">
         <form name="signIn" method="post">
             <input type="hidden" name="form" value="signIn">
-            <input type="text" name="email" id="email" placeholder="E-Mail"
+            <input type="textd" name="email" id="email" placeholder="E-Mail"
                    value="<?php echo htmlspecialchars($handler->getUser());?>">
             <span style="color:crimson;font-size: 15px;font-family: 'DejaVu Sans'"><?php echo $handler->getUserError();?></span>
             <input type="password" name="password" id="password" placeholder="Password">
