--- a/view/user/timeline.phtml
+++ b/view/user/timeline.phtml
@@ -36,7 +36,7 @@
                 }
             };
             page++;
-            xhttp.open("GET", "http://localhost/social-network/public/index.php/timeline=" + page);
+            xhttp.open("GET", "/social-network/public/index.php/timeline=" + page);
             xhttp.send();
 
         }
